rental-service/kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: JAVA_TOOL_OPTIONS
              value: -Dcom.sun.management.jmxremote
                     -Dcom.sun.management.jmxremote.port=9010
                     -Dcom.sun.management.jmxremote.rmi.port=9010
                     -Dcom.sun.management.jmxremote.authenticate=false
                     -Dcom.sun.management.jmxremote.ssl=false
                     -Dcom.sun.management.jmxremote.local.only=false
                     -Djava.rmi.server.hostname=127.0.0.1
          image: robotron1/rental-service:v1.0
          name: app
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}
