rental-service/kubernetes/comment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: comment
  name: comment
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: jmx
      protocol: TCP
      port: 9012
      targetPort: 9012
  type: LoadBalancer
  selector:
    io.kompose.service: comment
status:
  loadBalancer: {}
