rental-service/kubernetes/comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: comment
  name: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - image: robotron1/spring_comment:v1.0
          name: comment
          imagePullPolicy: Always
          resources:
            requests:
              memory: "732Mi"
              cpu: "500m"
            limits:
              memory: "732Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service
spec:
  selector:
    app: rental-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
