rental-service/kubernetes/rental.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rental
  name: rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental
  template:
    metadata:
      labels:
        app: rental
    spec:
      containers:
        - image: robotron1/spring_rental:v1.0
          name: rental
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "732Mi"
              cpu: "500m"
            limits:
              memory: "732Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service
spec:
  selector:
    app: rental-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
